# matico

./: .develop.env  .dockerignore  .env  .env-sample  .gitignore  .ignore  .npmrc  .prettierignore  .yarnrc.yml  CODEOWNERS  Cargo.toml  Dockerfile  Dockerfile_simple  README.md  Settings.toml  Todo.md  build.sh  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  register_raster_cog.sh  render.yaml  rest  start_raster_server.sh  tsconfig.json  vercel.json
matico_area_analysis/: Cargo.toml
matico_area_analysis/src/: lib.rs  matico_analysis.rs  parameter_options.rs
matico_common/: Cargo.toml
matico_common/src/: autocomplete.rs  filters.rs  lib.rs  variables.rs
matico_common/src/compute/: errors.rs  mod.rs  options.rs  variables.rs
matico_compute/matico_analysis/: Cargo.toml
matico_compute/matico_analysis/bindings/: ColumnOptions.ts  NumericCategoryOptions.ts  NumericFloatOptions.ts  NumericIntOptions.ts  OptionGroupVal.ts  OptionGroupVals.ts  ParameterOptions.ts  ParameterValue.ts  SpecParameter.ts  SpecParameterValue.ts  TextCategoryOptions.ts  TextOptions.ts
matico_compute/matico_analysis/src/: lib.rs  parameter_options.rs  parameter_values.rs
matico_compute/matico_hdbscam_analysis/: Cargo.toml  build.sh
matico_compute/matico_hdbscam_analysis/src/: lib.rs
matico_compute/matico_lisa/: Cargo.toml
matico_compute/matico_lisa/src/: lib.rs
matico_compute/matico_synthetic_data_analysis/: Cargo.toml  build.sh
matico_compute/matico_synthetic_data_analysis/src/: lib.rs  simulation.rs
matico_dataservice/: Cargo.toml
matico_dataservice/plugin_interface/: plugin_exports.wai  plugin_imports.wai
matico_dataservice/src/: dataservice.rs  lib.rs  main.rs  plugin.rs
matico_dataservice/tests/: dataset_service.rs  helpers.rs
matico_regres/: Cargo.toml
matico_server/: .develop.env  .env.prod  .gitignore  Cargo.toml  Dockerfile  README.md  api.md  diesel.toml  tmpb14f0acc-fe00-493d-a45b-2c894fcaa8e1  tmpe2cee3d6-f110-4a2e-97bc-7848f1fe09c1  tmpfile
matico_server/bindings/: AppSearch.ts  Column.ts  HistogramEntry.ts  HistogramResults.ts  StatParams.ts  StatResults.ts  ValCountEntry.ts  ValueCountsResults.ts
matico_server/migrations/00000000000000_diesel_initial_setup/: up.sql
matico_server/migrations/2021-01-07-154355_add_users/: up.sql
matico_server/migrations/2021-02-02-183639_create_queries/: down.sql
matico_server/migrations/2021-02-05-152451_add_geom_col_and_id_col_to_dataset/: down.sql
matico_server/migrations/2021-02-09-145431_create_dashboard_table/: up.sql
matico_server/migrations/2021-02-21-142809_add_permissions_table/: up.sql
matico_server/migrations/2021-12-31-142819_change_dashboard_to_new_spec/: down.sql  up.sql
matico_server/migrations/2022-01-06-150716_add_table_name_to_dataset/: down.sql  up.sql
matico_server/migrations/2022-01-14-180521_create_import_sync_import/: down.sql  up.sql
matico_server/migrations/2022-01-19-211841_add_import_params_to_dataset/: down.sql  up.sql
matico_server/migrations/2022-01-24-235453_add_public_to_api/: down.sql  up.sql
matico_server/resources/test/: Pipfile  csv_data_with_wkb.csv  generate_test_data.py  squirrel.geojson
matico_server/simple-map-viewer/: .eslintrc.json
matico_server/simple-map-viewer/src/: api.ts
matico_server/simple-map-viewer/src/Components/: DashboardBuilderSelectorStyles.tsx
matico_server/simple-map-viewer/src/Components/AddLayerModal/: AddLayerModal.tsx  AddLayerModalStyles.tsx
matico_server/simple-map-viewer/src/Components/BaseMapSelector/: BaseMapSelectorStyles.tsx
matico_server/simple-map-viewer/src/Contexts/: DashbardBuilderContext.tsx
matico_server/simple-map-viewer/src/ExternalTypes/: carto_deckgl.d.ts
matico_server/simple-map-viewer/src/Hooks/: useBasicColumnStats.ts  useDashboards.ts  useData.ts  useDataSource.ts  useDataset.ts  useDatasets.ts  useLoginSignup.ts  useProfile.ts  useQueries.ts  useUniqueColumnValues.ts
matico_server/simple-map-viewer/src/types/: DashboardSpecification.ts  Dataset.ts  LayerSpecification.ts  Pagination.ts  Quantizers.ts  Sources.ts  Users.ts  index.ts
matico_server/src/: app_config.rs  app_state.rs  auth.rs  errors.rs  lib.rs  main.rs  schema.rs  telemetry.rs
matico_server/src/db/: datasource.rs  mod.rs  postgis_datasource.rs  queries.rs  query_builder.rs  query_result.rs  setup.rs  tile_query.sql
matico_server/src/models/: apis.rs  apps.rs  columns.rs  dashboards.rs  datasets.rs  mod.rs  pallets.rs  permissions.rs  queries.rs  stats.rs  sync_import.rs  users.rs
matico_server/src/routes/: apis.rs  apps.rs  auth.rs  columns.rs  compute.rs  data.rs  datasets.rs  mod.rs  users.rs
matico_server/src/scheduler/: import_scheduler.rs  mod.rs
matico_server/src/tiler/: mod.rs  routes.rs
matico_server/src/utils/: formats.rs  geo_file_utils.rs  mod.rs  sort.rs
matico_server/static/: asset-manifest.json  index.html
matico_server/static/docs/: api.yaml  swagger-ui-bundle.js  swagger-ui-standalone-preset.js  swagger-ui.js
matico_server/static/static/css/: 2.456aabb6.chunk.css  2.456aabb6.chunk.css.map  main.af4a186e.chunk.css  main.af4a186e.chunk.css.map
matico_server/static/static/js/: 2.d9c11ba5.chunk.js  2.d9c11ba5.chunk.js.LICENSE.txt  3.711b3af2.chunk.js  3.711b3af2.chunk.js.map  main.57de02e3.chunk.js  main.57de02e3.chunk.js.map  runtime-main.9d824b3b.js  runtime-main.9d824b3b.js.map
matico_server/tests/: datasets.rs  imports.rs  stats.rs  users.rs
matico_server/tests/helpers/: imports.rs  mod.rs  stats.rs  users.rs
matico_spec/: Cargo.toml  README.md  index.ts  notes.md  package.json
matico_spec/pkg/: matico_spec.d.ts  matico_spec.js  matico_spec_bg.js  matico_spec_bg.wasm  matico_spec_bg.wasm.d.ts  package.json
matico_spec/scripts/: build.js  options.js  watch.js
matico_spec/src/: apps.rs  autocomplete.rs  charts.rs  colors.rs  controls.rs  dashboard.rs  dataset_transforms.rs  datasets.rs  filters.rs  layouts.rs  lib.rs  mapping.rs  page.rs  pane.rs  section.rs  theme.rs  validation.rs  variables.rs
matico_spec_derive/: Cargo.toml
matico_spec_derive/src/: lib.rs
(+1310 files in other folders)
