[package]
name = "rust_to_typescript_test"
version = "0.1.0"
authors = ["Stuart Lynn <stuart.lynn@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features=["serde", "wasmbind"]}
serde = {version = "^1.0.130", features=["derive"]}
validator = {version="0.12", features=["derive"]}
wasm-bindgen = {version = "0.2.77", features = ['serde-serialize']}
serde_json = "1.0.59"
