[package]
name = "matico_area_analysis"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = {version = "^1.0.130", features=["derive"]}
wasm-bindgen = {version = "0.2.77", features = ['serde-serialize']}
serde_json = "1.0.59"
geozero = "0.7.7"
geo-types="0.7.2"
geo = "0.18.0"
arrow2 ={version="0.9.1", features = ["io_ipc","compute"]}
wkb="0.7.1"
wee_alloc={version="0.4.5"}
enum_dispatch="0.3.7"
