[package]
name = "matico_dataservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matico_spec = {path="../matico_spec"}
tokio = { version = "1", features = ["full"] }
uuid = {version = "1.2.2", features=['v4']}
async-trait = "0.1.59"
reqwest = "0.11.13"
polars =  { version = "0.26.1", features = ["lazy","sql", "csv-file", "json","ipc","is_in", "strings", "temporal", "dtype-duration", "dtype-categorical", "concat_str",  "rank", "lazy_regex"]}
wasmer={version="3.1.0"}

tui = {version= "0.19", optional=true}
crossterm ={version = "0.25", optional=true}

[features]
default = ["tui"]
tui = ["dep:tui", "dep:crossterm"]
js = ["wasmer/js"]
