[package]
name = "matico_regres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-machine="0.5.4"
arrow2 ={version="0.6.1", features = ["io_ipc"]}
wasm-bindgen = {version = "0.2.77", features = ['serde-serialize']}
