[package]
name = "matico_server"
version = "0.1.0"
authors = ["Stuart Lynn <stuart.lynn@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = 'modest_map_maker'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3"
actix-web = "3"
futures = "0.3.1"
sanitize-filename = "0.2"
gdal={ version = "0.8.0", features=["bindgen"]}
config = "0.10"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.59"
derive_more = "0.99.2"
diesel = { version = "^1.1.0", features = ["postgres", "r2d2","chrono", "uuid"] }
r2d2 = "0.8"
chrono = { version = "0.4.10", features = ["serde"] }
diesel_geometry = "1.2.2"
actix-web-httpauth = "0.5.0" #{ git = "https://github.com/actix/actix-web-httpauth" }
alcoholic_jwt = "1.0.0"
reqwest = {version = "0.10.10", features=["json"]}
actix-rt = "1.1.1"
jsonwebtoken= "7"
rust-argon2="0.8"
rand = "0.7"
uuid = { version = "0.6", features = ["serde", "v4"] }
actix-cors = "0.5.4"
env_logger = "0.8.2"
log = "0.4.13"
actix-files = "0.5.0"
dotenv = "0.15.0"
diesel_as_jsonb="0.1.2"
geo-types = "^0.7.0"
sqlx = { version = "0.4", features = [
    "postgres","uuid","chrono","runtime-actix-rustls","json"
]}
slugify="0.1.0"
matico_spec= {path = "../matico_spec"}
ts-rs = {version="6.1", features=['chrono-impl', 'uuid-impl']}

[dev-dependencies]
tokio = "0.2.24"
