[package]
name = "matico_spec"
version = "0.1.0"
authors = ["Stuart Lynn <stuart.lynn@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wee_alloc"]



[dependencies]
chrono = { version = "0.4.22", features = ["serde", "wasmbind"] }
serde = { version = "^1.0.130", features = ["derive"] }
validator = { version = "0.12", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2.77", features = ['serde-serialize'] }
serde_json = "1.0.59"
serde_yaml = "0.8"
toml = "0.5.8"
uuid = { version = "0.6", features = ["serde", "v4"] }
url = { version = "2.2.2", features = ["serde"] }
matico_spec_derive = { path = "../matico_spec_derive" }
ts-rs = { version = "6.1", features = ['chrono-impl', 'uuid-impl', "serde-compat"] }
matico_common = { path = "../matico_common" }

wee_alloc = { version = "0.4.5", optional = true }

