[package]
name = "matico_spec_derive"
version = "0.1.0"
authors = ["Stuart Lynn <stuart.lynn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0.32", default-features = false }
syn = "1.0"
