[package]
name = "matico_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "^1.0.130", features = ["derive"] }
wasm-bindgen = { version = "0.2.77", features = ['serde-serialize'] }
serde_json = "1.0.59"
geo-types = "0.7.2"
geo = "0.18.0"
wkb = "0.7.1"
wee_alloc = { version = "0.4.5" }
enum_dispatch = "0.3.7"
matico_common = { path = "../../matico_common" }
ts-rs = { version = "6.1", features = ['chrono-impl', 'uuid-impl', "serde-compat"] }
polars = {default-features=false, version = "0.21.1", features = ["ipc", "dtype-u8", "dtype-i8"]}
geopolars = { git="https://github.com/stuartlynn/geopolars.git", branch= "wasm_test"}
geozero = { version = "0.9.4", features = ["with-wkb"], default-features=false }
arrow2 = { version = "0.9.1", features = ["io_ipc", "compute"] }
